Aligned the calendar header toward the bottom and added js media responsiveness to avoid the title going off the screen.

--- a/source/calendar/calendar.css
+++ b/source/calendar/calendar.css
@@ -223,13 +223,11 @@ button:hover {
 }
 
 .jump-btn {
-  background: none;
-    border: none;
-    cursor: pointer;
-    padding: 10px;
-    font-size: 16px;
-    color: black; 
-    transition: background-color 0.3s, color 0.3s;
+  /* padding-top: 20px; */
+  /* padding: 10px; */
+  color: black; 
+  transition: background-color 0.3s, color 0.3s;
+  /* line-height: 0; */
 }
 
 .jump-btn:hover {
